// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultTooltip /> renders correctly with props 1`] = `
<i
  className="pe-7s-help1 text-primary font-weight-bold"
  id="TooltipDemo"
/>
`;

exports[`<DefaultTooltip /> renders correctly with props 2 1`] = `
<i
  className="pe-7s-help1 text-danger font-weight-bold"
  id="TooltipDemo"
/>
`;
